# rag

./: .gitignore
uclouvain/: CREATE_TABLE.sql  README.md  ask_question.py  bulk_load.py  compose.yaml  embedding.py  indexation.py  list_corpus_files.py  pyproject.toml
uclouvain/__backup/: dummy.py  dummy.txt  embedding.py  fine_tuning.ipynb  fine_tuning.py  indexation.py
uclouvain/backend/: Dockerfile  README.md  prefetch.py
uclouvain/backend/src/: __init__.py  backend.py  database.py  embedding.py  generation.py  preprocessing.py  reranking.py  retrieval.py
uclouvain/database/: CREATE_TABLE.sql  Dockerfile  README.md
uclouvain/database/postgres_data/: README.md
uclouvain/frontend/: .env  Dockerfile  index.html  package-lock.json  package.json
uclouvain/frontend/src/: App.jsx
uclouvain/frontend/src/components/: Answer.jsx  Answer.module.css  StartConversation.jsx  StartConversation.module.css
uclouvain/rag-base/: Dockerfile  README.md  prefetch.py  requirements.txt
uclouvain/tunnelling/: Dockerfile  pyproject.toml  requirements.txt
uclouvain/tunnelling/src/: __init__.py  forward_tunnel.py
